--- a/yes.html
+++ b/yes.html
@@ -20,8 +20,8 @@
       
               <script>
           function nextPage() {
-            window.location.href = "https://wa.me/+918329287806";
-            //window.location.href = "https://www.instagram.com/swapnilsurule/";
+            //window.location.href = "https://wa.me/+918329287806";
+            window.location.href = "https://www.instagram.com/swapnilsurule/";
           }
         </script>
     </div>
